--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <div class="details"><img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label>
+    <div class="centered-main">
+      <p id="add-item-section"><label for="new-task">Add Item</label>
         <div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
       </p>
       <h3>Todo</h3>
