--- a/index.html
+++ b/index.html
@@ -7,16 +7,27 @@
     <div class="details"><img src="./eisenhower-matrix.jpg" class="details-img"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
     <div class="centered-main">
       <p id="add-item-section"><label class="label" for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task"class="task inp-elem" type="text"><button class="btn">Add</button></div>
+        <div class="task-row-wrapper"><input id="new-task"
+                                          class="task inp-elem"
+                                          type="text"><button class="btn">Add</button></div>
       </p>
       <h3 class="heading">Todo</h3>
       <ul class="task-list" id="incomplete-tasks">
-        <li class="task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Pay Bills</label><input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn"><img class="del-img" src="./remove.svg"></button></li>
-        <li class="edit-mode task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Go Shopping</label><input type="text" value="Go Shopping" class="task inp-elem"><button class="edit btn">Save</button><button class="delete btn"><img class="del-img" src="./remove.svg"></button></li>
+        <li class="task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Pay Bills</label>
+            <input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn">
+            <img class="del-img" src="./remove.svg"></button>
+        </li>
+        <li class="edit-mode task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task inp-elem"><button class="edit btn">Save</button><button class="delete btn">
+            <img class="del-img" src="./remove.svg"></button>
+        </li>
       </ul>
       <h3 class="heading">Completed</h3>
       <ul class="task-list" id="completed-tasks">
-        <li class="task-list-elem"><input class="inp-elem" type="checkbox" checked><label class="task label">See the Doctor</label><input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn"><img class="del-img" src="./remove.svg"></button></li>
+        <li class="task-list-elem"><input class="inp-elem" type="checkbox" checked><label class="task label">See the Doctor</label>
+            <input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn">
+            <img class="del-img" src="./remove.svg"></button>
+        </li>
       </ul>
     </div>
     <script src="app.js"></script>
