--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="details"><img src="./eisenhower-matrix.jpg" class="details-img"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
+    <aside class="details"><img src="./eisenhower-matrix.jpg" class="details-img"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></aside>
     <div class="centered-main">
-      <p id="add-item-section"><label class="label" for="new-task">Add Item</label>
+      <section id="add-item-section"><label class="label" for="new-task">Add Item</label>
         <div class="task-row-wrapper"><input id="new-task"
                                           class="task inp-elem"
                                           type="text"><button class="btn">Add</button></div>
-      </p>
-      <h3 class="heading">Todo</h3>
+      </section>
+      <h1 class="heading">Todo</h1>
       <ul class="task-list" id="incomplete-tasks">
         <li class="task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Pay Bills</label>
             <input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn">
@@ -22,7 +22,7 @@
             <img class="del-img" src="./remove.svg"></button>
         </li>
       </ul>
-      <h3 class="heading">Completed</h3>
+      <h2 class="heading">Completed</h2>
       <ul class="task-list" id="completed-tasks">
         <li class="task-list-elem"><input class="inp-elem" type="checkbox" checked><label class="task label">See the Doctor</label>
             <input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn">
