--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <aside class="details"><img src="./eisenhower-matrix.jpg" class="details-img"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></aside>
+    <aside class="details"><img src="./eisenhower-matrix.jpg" class="details-img" alt="Eisenhower matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></aside>
     <div class="centered-main">
       <section id="add-item-section"><label class="label" for="new-task">Add Item</label>
         <div class="task-row-wrapper"><input id="new-task"
@@ -15,18 +15,18 @@
       <ul class="task-list" id="incomplete-tasks">
         <li class="task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Pay Bills</label>
             <input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg"></button>
+            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
         <li class="edit-mode task-list-elem"><input class="inp-elem" type="checkbox"><label class="task label">Go Shopping</label>
             <input type="text" value="Go Shopping" class="task inp-elem"><button class="edit btn">Save</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg"></button>
+            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
       </ul>
       <h2 class="heading">Completed</h2>
       <ul class="task-list" id="completed-tasks">
         <li class="task-list-elem"><input class="inp-elem" type="checkbox" checked><label class="task label">See the Doctor</label>
             <input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg"></button>
+            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
       </ul>
     </div>
