--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <aside class="details"><img src="./eisenhower-matrix.jpg" class="details-img" alt="Eisenhower matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></aside>
-    <div class="centered-main">
-      <section id="add-item-section"><div class="label" for="new-task">Add Item</div>
-        <div class="task-row-wrapper"><input id="new-task"
-                                          class="task inp-elem"
-                                          type="text"><button class="btn">Add</button></div>
+    <aside class="details"><img src="./eisenhower-matrix.jpg" class="details__scheme" alt="Eisenhower matrix"><a class="details__more" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></aside>
+    <div class="container">
+      <section id="add__item"><div class="label" for="new-task">Add Item</div>
+        <div class="add__wrapper"><input id="new-task" class="task inp-elem" type="text">
+          <button class="btn">Add</button>
+        </div>
       </section>
       <h1 class="heading">Todo</h1>
       <ul class="task-list" id="incomplete-tasks">
-        <li class="task-list-elem"><input class="inp-elem" type="checkbox"><div class="task label">Pay Bills</div>
+        <li class="task-list__elem"><input class="inp-elem" type="checkbox"><div class="task label">Pay Bills</div>
             <input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn">
             <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
-        <li class="edit-mode task-list-elem"><input class="inp-elem" type="checkbox"><div class="task label">Go Shopping</div>
+        <li class="task-list__edit task-list__elem"><input class="inp-elem" type="checkbox"><div class="task label">Go Shopping</div>
             <input type="text" value="Go Shopping" class="task inp-elem"><button class="edit btn">Save</button><button class="delete btn">
             <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
       </ul>
       <h2 class="heading">Completed</h2>
       <ul class="task-list" id="completed-tasks">
-        <li class="task-list-elem"><input class="inp-elem" type="checkbox" checked><div class="task label">See the Doctor</div>
+        <li class="task-list__elem"><input class="inp-elem" type="checkbox" checked><div class="task label">See the Doctor</div>
             <input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn">
             <img class="del-img" src="./remove.svg" alt="Delete button"></button>
         </li>
