fix: delete alt in minor img accroding to rule 1.2 in html-and-css-extended

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
       <ul class="task-list" id="incomplete-tasks">
         <li class="task-list__elem"><input class="inp-elem" type="checkbox"><div class="task label">Pay Bills</div>
             <input class="task inp-elem" type="text"><button class="edit btn">Edit</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
+            <img class="del-img" src="./remove.svg" alt=""></button>
         </li>
         <li class="task-list__edit task-list__elem"><input class="inp-elem" type="checkbox"><div class="task label">Go Shopping</div>
             <input type="text" value="Go Shopping" class="task inp-elem"><button class="edit btn">Save</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
+            <img class="del-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
       <h2 class="heading">Completed</h2>
       <ul class="task-list" id="completed-tasks">
         <li class="task-list__elem"><input class="inp-elem" type="checkbox" checked><div class="task label">See the Doctor</div>
             <input type="text" class="task inp-elem"><button class="edit btn">Edit</button><button class="delete btn">
-            <img class="del-img" src="./remove.svg" alt="Delete button"></button>
+            <img class="del-img" src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </div>
